--- a/.github/workflows/cron_read.yaml
+++ b/.github/workflows/cron_read.yaml
@@ -26,8 +26,8 @@ jobs:
         run: node main.js 
       - name: Commit Changes
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Action"
+          git config --global user.email "sgcnlin@gmail.com"
+          git config --global user.name "sglinhome"
           git add .
           git diff --staged --quiet || git commit -m "Update files at $(date '+%Y-%m-%d %H:%M:%S')"
           git push origin HEAD:main
